IGNITE-19407 Extending test coverage (wip).